@@ -1,0 +1,2 @@
+confdb.version=V01-06-39
+confdb.contact=raul.jimenez.estupinan@cern.ch
